# IndieStudio

./: .gitignore  CMakeLists.txt  README.md  install.bat  install.sh
.data/profile/1/: data.txt
assets/models/boardgame/desctructible/: japaneasebox.glb  lootingBox.glb  woodbox.glb
assets/models/entities/blasts/: fire.iqm
assets/models/entities/bombs/: bomb.iqm
assets/models/entities/players/: blue_default.iqm  blue_katana.iqm  red_default.iqm  red_katana.iqm  white_default.iqm  white_katana.iqm  yellow_default.iqm  yellow_katana.iqm
assets/models/entities/players/animations/: animation_pikmin_default.iqm  animation_pikmin_katana.iqm
assets/models/entities/powerups/: BombUp.glb  FireUp.glb  SpeedUp.glb  WallPassUp.glb
assets/models/maps/chinease/: carpets.mtl  decorations.mtl  divers_objects.mtl  fountain.iqm  infrastructure.mtl  mapInfos.json  tables.mtl
assets/models/maps/picnic/: apples.glb  bananas1.glb  bananas2.glb  bobbin1.glb  bobbin2.glb  bobbin3.glb  bobbin4.glb  bottle1.glb  bottle2.glb  bottle3.glb  box.glb  cake1.glb  cake2.glb  carpet.glb  glasses.glb  ground.glb  mapInfos.json  oranges1.glb  oranges2.glb  picnicbox.glb  tree.glb
assets/models/maps/picnic/textures/: blue_1.png~  red_dark.png-autosave.kra
assets/models/menu/: menu.mtl
include/core/: AGameState.hpp  Errors.hpp  GameEngine.hpp  Time.hpp
include/entities/: Blast.hpp  Bombs.hpp  Camera.hpp  LootBox.hpp
include/entities/characters/: ACharacters.hpp  Bots.hpp  CharacterStats.hpp  ICharacters.hpp  Players.hpp
include/entities/powerUp/: APowerUp.hpp  BombUp.hpp  FireUp.hpp  SpeedUp.hpp  WallPassUp.hpp
include/environments/: GameBoard.hpp  Map.hpp  Skybox.hpp
include/game/: Game.hpp  PreGame.hpp
include/game/assets/: GameAssets.hpp
include/menu/: ControlOptions.hpp  CreateProfile.hpp  LandingMenu.hpp  LoadingScreen.hpp  MainMenu.hpp  OptionsMenu.hpp  PauseMenu.hpp  SaveMenu.hpp  SelectGame.hpp  SelectMap.hpp  VolumeOptions.hpp
include/objects/: Button.hpp  Image.hpp  MenuButton.hpp  TextButton.hpp
include/objects/models/: AnimatedModels.hpp  StaticModels.hpp
include/settings/: Chronometer.hpp  Music.hpp  Options.hpp
include/text/: Text.hpp
include/utils/: Vector3Utils.hpp
src/: main.cpp
src/core/: Errors.cpp  GameEngine.cpp  Time.cpp
src/entities/: Blast.cpp  Bombs.cpp  Camera.cpp  LootBox.cpp
src/entities/characters/: ACharacters.cpp  Bots.cpp  CharacterStats.cpp  MoveBots.cpp  Players.cpp
src/entities/characters/IA/: EasyAI.cpp  MediumIA.cpp
src/entities/powerUp/: BombUp.cpp  FireUp.cpp  SpeedUp.cpp  WallPassUp.cpp
src/environments/: GameBoard.cpp  Map.cpp  Skybox.cpp
src/game/: Game.cpp  PreGame.cpp
src/game/assets/: GameAssets.cpp
src/menu/: ControlOptions.cpp  CreateProfile.cpp  LandingMenu.cpp  LoadingScreen.cpp  MainMenu.cpp  OptionsMenu.cpp  PauseMenu.cpp  SaveMenu.cpp  SelectGame.cpp  SelectMap.cpp  VolumeOptions.cpp
src/objects/: Button.cpp  Image.cpp  MenuButton.cpp  TextButton.cpp
src/objects/models/: AnimatedModels.cpp  StaticModels.cpp
src/settings/: Chronometer.cpp  Music.cpp  Options.cpp
src/text/: Text.cpp
